--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "taskmanager"
 version = "0.1.0"
 description = ""
 authors = ["eggunof <eggunof@gmail.com>"]
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
