--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 
+[tool.poetry.group.lint]
+optional = true
+
+[tool.poetry.group.lint.dependencies]
+pylint = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core"]
