--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ optional = true
 pylint = "^3.1.0"
 mypy = "^1.9.0"
 black = "^24.3.0"
+isort = "^5.13.2"
 
 [tool.black]
 line-length = 120
@@ -27,6 +28,14 @@ exclude = '''
     /.git
 )
 '''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 120
+include_trailing_comma = true
+combine_as_imports = true
+remove_redundant_aliases = true
 
 [build-system]
 requires = ["poetry-core"]
