--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ python = "^3.10"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.0"
+
 [tool.poetry.group.lint]
 optional = true
 
