add test job to workflow

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,3 +28,28 @@ jobs:
       - name: Lint with pre-commit
         working-directory: backend
         run: poetry run pre-commit run --all-files
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "3.10", "3.11" ]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install poetry
+        run: pipx install poetry
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: "poetry"
+          cache-dependency-path: backend/poetry.lock
+
+      - name: Install dependencies
+        working-directory: backend
+        run: poetry install --with test
+
+      - name: Test with pytest
+        working-directory: backend
+        run: poetry run pytest
